# challenge2023_server

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/hybrid_mpc_local_planner/: CMakeLists.txt  mlpp_plugin.xml  package.xml  setup.py
src/hybrid_mpc_local_planner/cfg/: hybrid_mpc_local_planner_params.yaml
src/hybrid_mpc_local_planner/include/hybrid_mpc_local_planner/: hybrid_mpc_config.h  hybrid_mpc_planner.h  hybrid_mpc_planner_ros.h  mpc_local_planner_plugin.h  pid.hpp  utils.hpp
src/hybrid_mpc_local_planner/scripts/hybrid_mpc_local_planner/: mpc_planner_core.py  mpc_planner_server.py  pid.py
src/hybrid_mpc_local_planner/src/: hybrid_mpc_config.cpp  hybrid_mpc_planner.cpp  hybrid_mpc_planner_ros.cpp  mpc_local_planner_plugin.cpp  pid.cc  utils.cc
src/hybrid_mpc_local_planner/srv/: MPCTrajPlanner.srv
src/minnav_moma_description/: .gitignore  CMakeLists.txt  README.md
src/minnav_moma_description/config/v2/: joint_names_WholeUrdfV2.yaml
src/minnav_moma_description/config/v3/: joint_names_MOMA_V3_URDF.yaml
src/minnav_moma_description/launch/: display.launch  display.rviz  gazebo.launch  visualize.launch  visualize.rviz
src/minnav_moma_description/meshes/: kinova_realsense_coupling.stl
src/minnav_moma_description/meshes/v2/: 2DRadar.STL  3DRadar.STL  ArmBase.STL  Head.STL  PanTiltLink1.STL  UniWheelBase_LB.STL  UniWheelBase_LF.STL  UniWheelBase_RB.STL  UniWheelBase_RF.STL  UniWheel_LB.STL  UniWheel_LF.STL  UniWheel_RB.STL  UniWheel_RF.STL
src/minnav_moma_description/meshes/v3/: ArmBase.STL  Head.STL  LIDAR.STL  Pantilt_PanLink.STL  Pantilt_TiltLink.STL  UniWheel_LF.STL  UniwheelPivot_LB.STL  UniwheelPivot_LF.STL  UniwheelPivot_RB.STL  UniwheelPivot_RF.STL  Uniwheel_LB.STL  Uniwheel_RB.STL  Uniwheel_RF.STL  moma_base_link.STL
src/minnav_moma_description/meshes/v7/: ArmBase.STL  Base_link.STL  Head.STL  PanTiltLink1.STL  Radar_2D.STL  Radar_3D.STL  UniWheelBase_LB.STL  UniWheelBase_LF.STL  UniWheelBase_RB.STL  UniWheelBase_RF.STL  UniWheel_LB.STL  UniWheel_LF.STL  UniWheel_RB.STL  UniWheel_RF.STL
src/minnav_moma_description/urdf/: realsense_d435.urdf.xacro
src/minnav_moma_description/urdf/v2/: minnav_moma_description.csv  minnav_moma_description.gv  minnav_moma_description.urdf  minnav_moma_description.urdf.xacro  minnav_moma_j2s7s300_xacro.xacro
src/minnav_moma_description/urdf/v3/: MOMA.proto  MOMA_V3_SIMP.proto  MOMA_V3_URDF.csv  MOMA_V3_URDF.urdf  MOMA_V3_URDF_before.urdf  minnav_kinova_xacro.gv  minnav_moma.urdf  minnav_moma_description.urdf.xacro  minnav_moma_j2s6s200.urdf  minnav_moma_j2s6s200_xacro.xacro  minnav_moma_j2s7s200_xacro.xacro  minnav_moma_j2s7s300_xacro.xacro
src/minnav_moma_description/urdf/v7/: WholeUrdfV7_1.csv  WholeUrdfV7_1.urdf  minnav_moma_description.urdf.xacro  minnav_moma_j2s7s300_xacro.xacro
src/webots_ros/: CMakeLists.txt  README.md  eval_run.sh  eval_run_docker.sh  evaluation_docker.sh  server_run.sh
src/webots_ros/config/: gmapping.yaml  hand_camera_octomap.yaml  intrinsic_virtual.yaml  j2s6s200.srdf  laser_filter.yaml  ros_control_moma.yaml  socket_config.py
src/webots_ros/config/map/: 0.pgm  0.yaml  0_p.pgm  1.pgm  1.yaml  10.pgm  10.yaml  10_p.pgm  11.pgm  11.yaml  11_p.pgm  12.pgm  12.yaml  12_p.pgm  13.pgm  13.yaml  13_p.pgm  14.pgm  14.yaml  14_p.pgm  15.pgm  15.yaml  15_p.pgm  1_p.pgm  2.pgm  2.yaml  2_p.pgm  3.pgm  3.yaml  3_p.pgm  4.pgm  4.yaml  4_p.pgm  5.pgm  5.yaml  5_p.pgm  6.pgm  6.yaml  6_p.pgm  7.pgm  (+8 more)
src/webots_ros/config/navigation_configure/base_moma/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/webots_ros/controllers/random_ctl/: random_ctl.py
src/webots_ros/launch/: demo_socket.launch  mobile_arm_camera.launch  mobile_arm_moveit.launch  mobile_arm_ros_control.launch  random_scene.launch  webots.launch  webots_nav_with_mpc.launch
src/webots_ros/msg/: InstanceInfo.msg  ObjectGoal.msg
src/webots_ros/protos/J2s6s200_meshes/: J2s6s200_arm_0Mesh.proto  J2s6s200_base_0Mesh.proto  J2s6s200_finger_distal_0Mesh.proto  J2s6s200_finger_proximal_0Mesh.proto  J2s6s200_forearm_0Mesh.proto  J2s6s200_hand_2finger_0Mesh.proto  J2s6s200_ring_big_0Mesh.proto  J2s6s200_ring_small_0Mesh.proto  J2s6s200_shoulder_0Mesh.proto  J2s6s200_wrist_spherical_1_0Mesh.proto  J2s6s200_wrist_spherical_2_0Mesh.proto
src/webots_ros/rviz/: mobile_arm.rviz  mobile_arm_moveit.rviz  robot_gmapping.rviz
src/webots_ros/scripts/: constants.py  controller.py  grasp_quality.py  math_utils.py  task_eval.py  task_eval_docker.py  task_server_easy.py  task_server_normal.py  webots_launcher.py
src/webots_ros/scripts/graspnetAPI/: README.md
src/webots_ros/scripts/graspnetAPI/examples/: exam_eval.py
src/webots_ros/scripts/graspnetAPI/graspnetAPI.egg-info/: SOURCES.txt  requires.txt
src/webots_ros/scripts/graspnetAPI/graspnetAPI/utils/dexnet/grasping/: gripper.py
src/webots_ros/scripts/pointnet2/tf_ops/3d_interpolation/: tf_interpolate_compile.sh
src/webots_ros/scripts/pointnet2/tf_ops/grouping/: tf_grouping_compile.sh
src/webots_ros/scripts/pointnet2/tf_ops/sampling/: 1.pkl  tf_sampling_compile.sh
src/webots_ros/src/: mm_calibrate.cpp  ros_camera_info.cpp  ros_depth_camera.cpp  ros_localization.cpp
src/webots_ros/srv/: attach_obj.srv  get_grasp_pose.srv  search_and_pick_obj.srv
src/webots_ros/urdf/: Moma.urdf
